brand.jquery.org: Fix visible navigation button on wide viewport
Follows-up 09c7a70f0e, which added a button outside the content area,
with the `hidden` attribute to hide it by default.

These styles were stronger, causing it be visible unconditionally
on this particular domain.

Scope the styles to the content area to mitigate this.

--- a/themes/brand.jquery.org/style.css
+++ b/themes/brand.jquery.org/style.css
@@ -102,7 +102,8 @@ a {
 }
 
 /* Buttons */
-a.button, #content a.button, .button, input[type="submit"] {
+#content .button,
+#content a.button {
 	float: none;
 	display: inline-block;
 }
